tests/NormalTests/paczka1/small_fuzzy/66233443.err
Error in line 5: qVPKsVT S?14 33,?
Error in line 12: sMOgsa4h A817 18,2
